--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Transporte</name>
+	<name>TransporteNuevo</name>
 	<comment>Project Transporte created by Buildship.</comment>
 	<projects>
 	</projects>
